--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/SinIva.gif" alt="Animación Día sin IVA"></a>
                     </div>
                     <div class="carousel-slide">
-                        <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/feria.gif" alt="Animación Feria"></a>
+                        <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/Ruleta.gif" alt="Animación Feria"></a>
                     </div>
                     <div class="carousel-slide">
                         <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/PopUp.gif" alt="Animación Pop-Up"></a>
@@ -156,7 +156,7 @@
                 </div>
                 <div class="skill-item">
                     <img src="images/CLICKUP.png" alt="Adobe ClipUp Logo">
-                    <p>Trello</p>
+                    <p>ClickUp</p>
                 </div>
 
             </div>
@@ -170,7 +170,7 @@
                 <div class="experience-item">
                     <h3>Responsable Senior de Creatividad y Medios</h3>
                     <p class="company-date">Carrefour España | Marzo 2019 - Presente</p>
-                    <p>Liderazgo un equipo de 6 personas en la creación y diseño de newsletters, landing pages, campañas PAID, y material PLV. Asegurando calidad y coherencia visual en todas las comunicaciones.</p>
+                    <p>Lidero un equipo de 6 personas en la creación y diseño de newsletters, landing pages, campañas PAID, y material PLV. Asegurando calidad y coherencia visual en todas las comunicaciones.</p>
                 </div>
                 <div class="experience-item">
                     <h3>Coordinador, Diseñador y Jefe de Dpto.</h3>
